DuPont DevSB/src/objects/pse__Assignment_Daily_Note__c.object
<CustomObject>
    <customHelpPage>pse__AssignmentAndScheduleHelp</customHelpPage>
    <description>Stores daily notes for an assignment, usually entered by an assigned resource and viewed by users with staffing or project management roles.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <description>The Assignment to which the Daily Note belongs (master-detail).</description>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Assignment Daily Notes</relationshipLabel>
        <relationshipName>Assignment_Daily_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>pse__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date for which the Daily Note applies.  Only one Daily Note per day per Assignment</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__LastModifiedByUsername__c</fullName>
        <formula>LastModifiedBy.FirstName &amp; &apos; &apos; &amp; LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedByUsername</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Note__c</fullName>
        <description>Contents of the Daily Note (max 255 chars).</description>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <description>Formula hyperlink to Assignment Project associated with Daily Note</description>
        <formula>IF(OR(ISNULL(pse__Assignment__c),(pse__Assignment__c=&apos;&apos;),ISNULL(pse__Assignment__r.pse__Project__c),(pse__Assignment__r.pse__Project__c=&apos;&apos;)),null,HYPERLINK(&apos;/&apos;&amp;pse__Assignment__r.pse__Project__c,pse__Assignment__r.pse__Project__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <description>Formula hyperlink to Assigned Resource associated with Daily Note</description>
        <formula>IF(OR(ISNULL(pse__Assignment__c),(pse__Assignment__c=&apos;&apos;),ISNULL(pse__Assignment__r.pse__Resource__c),(pse__Assignment__r.pse__Resource__c=&apos;&apos;)),null,HYPERLINK(&apos;/&apos;&amp;pse__Assignment__r.pse__Resource__c,pse__Assignment__r.pse__Resource__r.FirstName&amp;&apos; &apos;&amp;pse__Assignment__r.pse__Resource__r.LastName))</formula>
        <label>Resource</label>
        <type>Text</type>
    </fields>
    <label>Assignment Daily Note</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADN-{0}</displayFormat>
        <label>Assignment Daily Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Daily Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>